Registration queries fixed

--- a/resources/css/registration_queries.css
+++ b/resources/css/registration_queries.css
@@ -13,6 +13,11 @@
     .form-box {
         width: 70%;
     }
+    h2 {
+        font-size: 130%;
+        /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
+        margin-bottom: 50px;
+    }
 }
 
 
@@ -23,9 +28,20 @@
         width: 80%;
         padding: 40px;
     }
+    h2 {
+        font-size: 130%;
+        /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
+        margin-bottom: 50px;
+    }
 }
 
 
 /* Small phones: from 0 to 480px */
 
-@media only screen and (max-width: 480px) {}
+@media only screen and (max-width: 480px) {
+    h2 {
+        font-size: 110%;
+        /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
+        margin-bottom: 50px;
+    }
+}
