--- a/resources/css/registration_queries.css
+++ b/resources/css/registration_queries.css
@@ -33,6 +33,11 @@
         /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
         margin-bottom: 50px;
     }
+    header {
+        height: 100vh;
+        background-size: auto;
+        background-position: center;
+    }
 }
 
 
