--- a/resources/css/login_queries.css
+++ b/resources/css/login_queries.css
@@ -13,4 +13,21 @@
     .form-box {
         width: 80%;
     }
+    h2 {
+        font-size: 130%;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    h2 {
+        font-size: 130%;
+        /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
+        margin-bottom: 50px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    h2 {
+        font-size: 110%;
+    }
 }
