Registration queries fixed

--- a/resources/css/registration_queries.css
+++ b/resources/css/registration_queries.css
@@ -45,4 +45,7 @@
         /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
         margin-bottom: 50px;
     }
+    header {
+        height: 200vh;
+    }
 }
